@@ -4,7 +4,8 @@ use warnings;
 
 # Modules.
 use Tags::Output::LibXML;
-use Test::More 'tests' => 3;
+use Test::More 'tests' => 4;
+use Test::NoWarnings;
 
 # Test.
 my $obj = Tags::Output::LibXML->new;
