@@ -1,5 +1,6 @@
 0.02
  - Add LICENSE file.
+ - Add Test::NoWarnings to tests.
  - Fix DEPENDENCIES section in doc.
  - Improve SEE ALSO section in doc.
  - Move author tests to xt/ directory.
